# TallerFinalGestionProyectos

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  plan.md
data/: dataset.yaml  download_dataset.py  eda.py
inference-svc/: Dockerfile  pyproject.toml
inference-svc/src/: mlflow_loader.py  process.py  server.py
mlflow/: config.py  experiment.py
proto/: vision.proto
training/: mlflow_setup.py  pyproject.toml  train.py
ui-svc/: Dockerfile  pyproject.toml
ui-svc/src/: app.py  grpc_client.py  webrtc_handler.py
