[project]
name = "inference-svc"
version = "0.1.0"
description = "Microservicio de inferencia YOLOv7 con gRPC"
requires-python = ">=3.11"

dependencies = [
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "torch>=2.0",
    "opencv-python-headless>=4.9",
    "onnxruntime>=1.17",
    "numpy>=1.26",
    "mlflow>=2.10",
    "protobuf>=4.25",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
