[project]
name = "training"
version = "0.1.0"
description = "YOLO training pipeline with Ultralytics and MLflow"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ultralytics>=8.3",
    "mlflow>=2.10",
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "torchaudio==2.5.1+cu121",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
