[project]
name = "ui-svc"
version = "0.1.0"
description = "Microservicio de UI con Streamlit y WebRTC"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.32",
    "streamlit-webrtc>=0.47",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "Pillow>=10.2",
    "av>=12.0",
    "protobuf>=4.25",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
